pkl-core/src/test/files/LanguageSnippetTests/input/errors/cannotInferParent3.pkl
class Person {
  name: String
}

res1: Mapping<Person, String> = new {
  [new { name = "Pigeon" }] = "Pigeon"
}
